--- a/src/main/resources/mmall.properties
+++ b/src/main/resources/mmall.properties
@@ -1,11 +1,11 @@
 
-ftp.server.ip=你的FTP服务器ip地址
-ftp.user=mmallftp
-ftp.pass=ftppassword
-ftp.server.http.prefix=http://img.happymmall.com/
+ftp.server.ip=111.231.253.75
+ftp.user=ftpuser
+ftp.pass=123456
+ftp.server.http.prefix=ftp://111.231.253.75/
 
 
-alipay.callback.url=http://www.happymmall.com/order/alipay_callback.do
+alipay.callback.url=http://zhanghaoshuan.s1.natapp.cc/order/alipay_callback.do
 
 password.salt = geelysdafaqj23ou89ZXcj@#$@#$#@KJdjklj;D../dSF.,
 
