--- a/src/main/resources.prod/datasource.properties
+++ b/src/main/resources.prod/datasource.properties
@@ -1,3 +1,5 @@
+#prod
+
 db.driverLocation=C:/Users/Administrator/IdeaProjects/mall/mysql-connector-java-5.1.6-bin.jar
 db.driverClassName=com.mysql.jdbc.Driver
 db.url=jdbc:mysql://111.231.253.75:3306/mmall?characterEncoding=utf-8
