--- a/src/main/resources.dev/mmall.properties
+++ b/src/main/resources.dev/mmall.properties
@@ -10,8 +10,11 @@ alipay.callback.url=http://zhanghaoshuan.s1.natapp.cc/order/alipay_callback.do
 password.salt = geelysdafaqj23ou89ZXcj@#$@#$#@KJdjklj;D../dSF.,
 
 #redis的端口号和ip地址
-redis.ip=111.231.253.75
-redis.port =6379
+redis1.ip=111.231.253.75
+redis1.port =6379
+
+redis2.ip=111.231.253.75
+redis2.port =6380
 
 #最大连接数
 redis.max.total=20
